src/tests/snapshots/hebi__tests__fn_call_kw__kw.snap
---
source: src/tests/fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
fn f(*, a):
  print a

f(a=10)


# Result (success):
none

# Stdout:
10


