src/tests/snapshots/hebi__tests__fn_call_kw__kw_missing.snap
---
source: src/tests/fn_call_kw.rs
expression: snapshot
---
# Modules:

            
# Input:
fn f(*, a):
  print a

f()


# Result (error):
mismatched keyword params: missing a

# Stdout:


