src/tests/snapshots/hebi__tests__fn_call_kw__kw_missing2.snap
---
source: src/tests/fn_call_kw.rs
expression: snapshot
---
# Modules:

            
# Input:
fn f(*, a, b):
  print a, b

f()


# Result (error):
In code at 0..0
Error: mismatched keyword params: missing a, b


# Stdout:


