src/tests/snapshots/hebi__tests__fn_call_kw__kw_missing_with_kwargs.snap
---
source: src/tests/fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
fn f(*, a, b, **kw):
  print a, b, kw

f()


# Result (error):
mismatched keyword params: missing a, b

# Stdout:


