src/tests/snapshots/hebi__tests__fn_call_kw__kw_unrecognized_and_missing.snap
---
source: src/tests/fn_call_kw.rs
expression: snapshot
---
# Modules:

            
# Input:
fn f(*, a, b, **kw):
  print a, b, kw

f(c=10)


# Result (error):
mismatched keyword params: missing a, b

# Stdout:


