src/tests/snapshots/hebi__tests__fn_call_kw__kw_with_default.snap
---
source: src/tests/fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
fn f(*, a, b=10):
  print a, b

f(a=1)
f(a=1, b=2)


# Result (success):
none

# Stdout:
1 10
1 2


